<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".noteListActivity">

    <item android:id="@+id/menu_deletenote"
        android:icon="@drawable/note_delete"
        android:title="@string/note_delete"
        app:showAsAction="always"  />

    <item android:id="@+id/menu_setting"
        android:icon="@mipmap/notesetting"
        android:title="@string/note_setting"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_search"
        android:title="@string/note_search"
        android:icon="@drawable/notesearch"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />




</menu>
