<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".noteEditActivity">

    <item android:id="@+id/menu_camera"
        android:icon="@drawable/notecamera"
        android:title="照相机"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_newpic"
        android:icon="@drawable/newpic"
        android:title="@string/note_pic"
        app:showAsAction="always"  />

    <item android:id="@+id/menu_delpic"
        android:icon="@drawable/delpic"
        android:title="删除图片"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_notesave"
        android:icon="@drawable/notesave"
        android:title="@string/note_save"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_notecount"
        android:icon="@mipmap/notecount"
        android:title="@string/note_count"
        app:showAsAction="never"/>

</menu>
